--- a/json/sanadaapp.json
+++ b/json/sanadaapp.json
@@ -44,7 +44,7 @@
             "address" : "長野県上田市二の丸",
             "lat" : 36.403305,
             "lng" : 138.244191,
-            "desc" : "上田城は、真田昌幸によって1585(天正13)年に築城された平城。<br>地方の小城であり、石垣も少なく一見したところ要害堅固な城とは見えないが、徳川方の二度にわたる攻撃を受けても落城しなかった堅固な城であった。<br>それは、周囲の河川や城下町を含めた全体が極めてすぐれた構造であったということが評価されている。<br>徳川の時代になり、上田城は原形を留めぬほど壊されたが、代わって入場した仙石氏によって復興された。<br>かつて本丸には櫓門2基、櫓7基があったが、現在は櫓3基と櫓門1基をみることができる。また、園内には石垣や土塁が到る所に残されている。【上田市HP】",
+            "desc" : "上田城は、真田昌幸によって1585(天正13)年に築城された平城。\n地方の小城であり、石垣も少なく一見したところ要害堅固な城とは見えないが、徳川方の二度にわたる攻撃を受けても落城しなかった堅固な城であった。\nそれは、周囲の河川や城下町を含めた全体が極めてすぐれた構造であったということが評価されている。\n徳川の時代になり、上田城は原形を留めぬほど壊されたが、代わって入場した仙石氏によって復興された。\nかつて本丸には櫓門2基、櫓7基があったが、現在は櫓3基と櫓門1基をみることができる。また、園内には石垣や土塁が到る所に残されている。【上田市HP】",
             "image" : "ueda-jo.jpg"
         },{
             "name" : "上田藩主居館跡",
@@ -100,13 +100,6 @@
             "address" : "長野県上田市中央六丁目",
             "lat" : 36.403108,
             "lng" : 138.258165,
-            "desc" : "浄土宗。開創当時は常福寺と称し、真田信之の菩提寺。信之の正室小松姫の墓がある。信之の後に上田城主となった仙石忠政が小諸の宝仙寺をここに移し、円覚院芳泉寺とした。【上田市HP】",
-            "image" : "housenji.jpg"
-        },{
-            "name" : "本陽寺",
-            "address" : "長野県上田市中央六丁目",
-            "lat" : 36.403108,
-            "lng" : 138.258165,
             "desc" : "上田城主仙石氏一族の墓が建てられている。小諸城主仙石秀久夫人の墓を中心に上田城主二代政俊の子供忠俊の墓（いずれも宝篋印塔）のほか五輪塔･舟型･角柱型などの石塔婆が大小11基ある。【上田市文化財マップ】",
             "image" : "honyoji.jpg"
         },{
@@ -121,7 +114,7 @@
             "address" : "長野県上田市常田二丁目",
             "lat" : 36.394379, 
             "lng" : 138.257955,
-            "desc" : "崇神天皇の時代に、科野の国造として任命されていた建五百連命が創立したとされている。<br>上田は信濃国分寺が置かれ、また国府庁が置かれた場所でもあり、その祭祀を修める神社とされ、信濃国総社だった事から総社大宮と呼ばれた時期もあったという。<br>戦国時代には大宮諏訪明神と呼ばれ、真田氏が上田城を築いた後は、城の鎮守として祀られたという。【おみやさんcom】",
+            "desc" : "崇神天皇の時代に、科野の国造として任命されていた建五百連命が創立したとされている。\n上田は信濃国分寺が置かれ、また国府庁が置かれた場所でもあり、その祭祀を修める神社とされ、信濃国総社だった事から総社大宮と呼ばれた時期もあったという。\n戦国時代には大宮諏訪明神と呼ばれ、真田氏が上田城を築いた後は、城の鎮守として祀られたという。【おみやさんcom】",
             "image" : "shinao-ohmiyasha.jpg"
         },{
             "name" : "向源寺",
