--- a/json/tatsunoapp.json
+++ b/json/tatsunoapp.json
@@ -18,5 +18,13 @@
         }
     ], 
     "pois" :[
+        {
+            "name" : "龍野城",
+            "address" : "兵庫県たつの市龍野町",
+            "lat" : 34.868797,
+            "lng" : 134.544833,
+            "desc" : "龍野城（たつのじょう）は兵庫県たつの市龍野町にある日本の城跡。別名、霞城。\n明応8年（1499年）に塩屋城の龍野赤松氏・赤松村秀が龍野に鶏籠山城を築いた。以後は政秀、広貞、広秀と続いたが、天正5年（1577年）に開城して、赤松氏から豊臣秀吉の手に渡り、播磨平定後、姫路城を本拠として整備した秀吉は新たに蜂須賀正勝を置いた。\n江戸時代に万治元年京極高和の丸亀移転の際に破却されたが、1672年に脇坂安政によって龍野城が再建された。この際山頂の郭は放棄され、山麓居館部のみの陣屋形式の城郭になった。現在の本丸御殿は1979年に再建されたものである。\n文/写真出典: フリー百科事典『ウィキペディア（Wikipedia）』",
+            "image" : "Tatsuno_castle.jpg"
+        }
     ]
 }
