--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "argv": "0.0.2",
     "fs-extra": "^1.0.0",
     "imagemagick": "^0.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.12.2",
+    "eslint-config-google": "^0.7.1"
   }
 }
