Enable log output in CloudWatch

--- a/StrolyMaplat/serverless.yml
+++ b/StrolyMaplat/serverless.yml
@@ -39,7 +39,12 @@ provider:
          - 'dynamodb:GetItem'
          - 'dynamodb:Scan'
        Resource: '*'
-
+    -  Effect: 'Allow'
+       Action:
+         - 'logs:CreateLogGroup'
+         - 'logs:CreateLogStream'
+         - 'logs:PutLogEvents'
+       Resource: 'arn:aws:logs:*:*:*'
 
 # you can overwrite defaults here
 #  stage: dev
