--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "argv": "0.0.2",
     "fs-extra": "^1.0.0",
-    "imagemagick": "^0.1.3"
+    "imagemagick": "^0.1.3",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
