--- a/editor/package.json
+++ b/editor/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "argv": "0.0.2",
     "async": "^2.5.0",
+    "child_process": "^1.0.2",
     "fs-extra": "^3.0.1",
     "imagemagick": "^0.1.3",
     "path": "^0.12.7"
