--- a/editor/package.json
+++ b/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "editor",
+  "name": "MaplatEditor",
   "version": "1.0.0",
   "description": "",
   "main": "lib/main.js",
@@ -13,6 +13,7 @@
     "argv": "0.0.2",
     "async": "^2.5.0",
     "child_process": "^1.0.2",
+    "electron-json-storage": "^3.0.5",
     "fs-extra": "^3.0.1",
     "imagemagick": "^0.1.3",
     "path": "^0.12.7"
