--- a/editor/package.json
+++ b/editor/package.json
@@ -14,6 +14,7 @@
     "async": "^2.5.0",
     "child_process": "^1.0.2",
     "electron-json-storage": "^3.0.6",
+    "file-url": "^2.0.2",
     "fs-extra": "^3.0.1",
     "imagemagick": "^0.1.3",
     "path": "^0.12.7"
