--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "csv-parse": "^1.2.0",
     "fs-extra": "^1.0.0",
     "imagemagick": "^0.1.3",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "turf": "^3.0.14",
+    "turf-is-clockwise": "^1.0.0",
+    "wellknown": "^0.5.0"
   },
   "devDependencies": {
     "eslint": "^3.12.2",
