--- a/editor/package.json
+++ b/editor/package.json
@@ -17,6 +17,9 @@
     "file-url": "^2.0.2",
     "fs-extra": "^3.0.1",
     "imagemagick": "^0.1.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "turf": "^3.0.14",
+    "turf-is-clockwise": "^1.0.0",
+    "wellknown": "^0.5.0"
   }
 }
