--- a/editor/package.json
+++ b/editor/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@turf/turf": "^4.5.2",
     "argv": "0.0.2",
     "async": "^2.5.0",
     "child_process": "^1.0.2",
