--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "Maplat",
+  "description": "Maplat is the cool Historical Map/Illustrated Map Viewer. It can transform each map coordinates with nonlinear but bijective projection and makes possible that the maps can collaborate with GPS/accurate maps, without distorting original maps. Data editor of this solution is provided as another project, MaplatEditor.",
+  "version": "0.0.1",
+  "homepage": "https://github.com/code4nara/Maplat/wiki",
+  "license": "MIT",
   "scripts": {
-    "build": "r.js -o rjs_config.js"
+    "build": "gulp build"
   },
   "dependencies": {
     "@turf/turf": "^4.5.2",
@@ -16,6 +21,11 @@
   },
   "devDependencies": {
     "eslint": "^3.12.2",
-    "eslint-config-google": "^0.7.1"
+    "eslint-config-google": "^0.7.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-header": "^1.8.9",
+    "gulp-requirejs": "^1.0.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
