--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://github.com/code4nara/Maplat/wiki",
   "license": "MIT",
   "scripts": {
-    "build": "gulp build"
+    "build": "gulp build",
+    "server": "node server.js"
   },
   "dependencies": {
     "@turf/turf": "^4.5.2",
@@ -20,12 +21,12 @@
     "wellknown": "^0.5.0"
   },
   "devDependencies": {
+    "child_process": "^1.0.2",
     "eslint": "^3.12.2",
     "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-header": "^1.8.9",
-    "gulp-requirejs": "^1.0.0",
     "gulp-uglify": "^3.0.0"
   }
 }
