--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-header": "^1.8.9",
-    "gulp-uglify": "^3.0.0"
+    "gulp-header": "^1.8.9"
   }
 }
