--- a/pwa/sample_manifest.json
+++ b/pwa/sample_manifest.json
@@ -15,8 +15,12 @@
     "sizes": "192x192",
     "type": "image/png"
   },{
-    "src": "./sample_icon.png",
+    "src": "./sample_icon-256.png",
     "sizes": "256x256",
+    "type": "image/png"
+  },{
+    "src": "./sample_icon-512.png",
+    "sizes": "512x512",
     "type": "image/png"
   }],
   "start_url": "../debug.html?overlay=true",
