--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "gulp build",
     "server": "gulp server",
     "less": "gulp less",
-    "css_build": "gulp css_build"
+    "css_build": "gulp css_build",
+    "mobile_build_test": "gulp mobile_build_test",
+    "mobile_build": "gulp mobile_build"
   },
   "dependencies": {
     "@turf/turf": "^4.5.2",
