--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Maplat",
   "description": "Maplat is the cool Historical Map/Illustrated Map Viewer. It can transform each map coordinates with nonlinear but bijective projection and makes possible that the maps can collaborate with GPS/accurate maps, without distorting original maps. Data editor of this solution is provided as another project, MaplatEditor.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "https://github.com/code4nara/Maplat/wiki",
   "license": "MIT",
   "scripts": {
@@ -11,13 +11,14 @@
     "css_build": "gulp css_build"
   },
   "dependencies": {
-    "@turf/turf": "^4.5.2",
+    "@turf/turf": "^4.7.3",
     "argv": "0.0.2",
-    "csv-parse": "^1.2.0",
+    "csv-parse": "^1.3.3",
     "fs-extra": "^1.0.0",
+    "hoek": "^5.0.3",
     "imagemagick": "^0.1.3",
-    "less": "^3.0.1",
-    "request": "^2.79.0",
+    "less": "^3.0.2",
+    "request": "^2.85.0",
     "requirejs": "^2.3.5",
     "turf": "^3.0.14",
     "turf-is-clockwise": "^1.0.0",
@@ -29,7 +30,7 @@
     "eslint-config-google": "^0.7.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-zip": "^4.1.0",
-    "gulp-header": "^1.8.9"
+    "gulp-header": "^1.8.12",
+    "gulp-zip": "^4.1.0"
   }
 }
