--- a/mobile_android/lib-maplat/build.gradle
+++ b/mobile_android/lib-maplat/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
 
+def VERSION_NAME = "1.0.0"
+
 android {
     compileSdkVersion 26
 
@@ -8,10 +10,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0.0"
-        version = android.defaultConfig.versionName
+        versionName VERSION_NAME
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -20,64 +20,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    /* AARの生成 */
+    /* AARの生成。build/outputs/aarに生成されます。 */
     libraryVariants.all { variant ->
         variant.outputs.all { output ->
             output.packageLibrary.exclude("libs/*")
             if (variant.name == android.buildTypes.release.name) {
-                outputFileName = output.outputFile.name.replace(("-release.aar"), "-${version}.aar")
+                outputFileName = output.outputFile.name.replace(("-release.aar"), "-${VERSION_NAME}.aar")
             } else if (variant.name == android.buildTypes.debug.name) {
-                outputFileName = output.outputFile.name.replace((".aar"), "-${version}.aar")
+                outputFileName = output.outputFile.name.replace((".aar"), "-${VERSION_NAME}.aar")
             }
         }
     }
 }
-/** ビルド前にルートディレクトリからassetsファイルをプロジェクト内にコピーするタスク */
-task copyFiles(type: Copy) {
-//    copy {
-//        from '../../apps'
-//        into 'src/main/assets/apps'
-//    }
-//    copy {
-//        from '../../css'
-//        into 'src/main/assets/css'
-//    }
-//    copy {
-//        from '../../fonts'
-//        into 'src/main/assets/fonts'
-//    }
-//    copy {
-//        from '../../js'
-//        into 'src/main/assets/js'
-//    }
-//    copy {
-//        from '../../locales'
-//        into 'src/main/assets/locales'
-//    }
-//    copy {
-//        from '../../maps'
-//        into 'src/main/assets/maps'
-//    }
-//    copy {
-//        from '../../parts'
-//        into 'src/main/assets/parts'
-//    }
-//    copy {
-//        from '../../tiles'
-//        into 'src/main/assets/tiles'
-//    }
-//    copy {
-//        from '../../mobile.html'
-//        into 'src/main/assets/'
-//    }
-}
-
-project.afterEvaluate {
-    preBuild.dependsOn copyFiles
-}
-
-clean.dependsOn copyFiles
-clean.mustRunAfter copyFiles
 
 repositories {
     maven {
@@ -95,4 +49,21 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.code.gson:gson:2.8.2'
+}
+
+/* MavenリポジトリにAARを出力する */
+def repo = new File(rootDir, "repository")
+apply plugin: 'maven'
+
+/* 以下のコマンドでローカルのリポジトリにAARをデプロイする */
+/* [Maplat/mobile_android]> gradlew uploadArchives */
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository url: "file://${repo.absolutePath}"
+            pom.version = VERSION_NAME
+            pom.groupId = 'jp.tilemap'
+            pom.artifactId = 'maplat'
+        }
+    }
 }
