--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "gulp build",
     "server": "gulp server",
     "less": "gulp less",
-    "css_build": "gulp css_build"
+    "css_build": "gulp css_build",
+    "config": "gulp config"
   },
   "dependencies": {
     "@turf/turf": "^4.7.3",
@@ -31,6 +32,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-header": "^1.8.12",
+    "gulp-replace": "^1.0.0",
     "gulp-zip": "^4.1.0"
   }
 }
