--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "gulp server",
     "less": "gulp less",
     "css_build": "gulp css_build",
-    "config": "gulp config"
+    "config": "gulp config",
+    "js_build": "gulp js_build"
   },
   "dependencies": {
     "@turf/turf": "^4.7.3",
