--- a/mobile_android/lib-maplat/build.gradle
+++ b/mobile_android/lib-maplat/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'maven'
 
 def VERSION_NAME = "0.1.1"
@@ -38,6 +39,7 @@ repositories {
         url 'https://maven.google.com/'
         name 'Google'
     }
+    mavenCentral()
 }
 
 dependencies {
@@ -49,6 +51,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 /* MavenリポジトリにAARを出力する */
