--- a/mobile_android/mobile_android_sample_kotlin/app/build.gradle
+++ b/mobile_android/mobile_android_sample_kotlin/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    //buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "jp.tilemap.maplatapptest"
         minSdkVersion 21
