--- a/package.json
+++ b/package.json
@@ -1,57 +1,8 @@
 {
   "name": "Maplat",
-  "description": "Maplat is the cool Historical Map/Illustrated Map Viewer. It can transform each map coordinates with nonlinear but bijective projection and makes possible that the maps can collaborate with GPS/accurate maps, without distorting original maps. Data editor of this solution is provided as another project, MaplatEditor.",
-  "version": "0.5.3-2",
-  "homepage": "https://github.com/code4nara/Maplat/wiki",
-  "license": "MIT",
-  "scripts": {
-    "build": "gulp build",
-    "server": "gulp server",
-    "less": "gulp less",
-    "css_build": "gulp css_build",
-    "sw_build": "gulp sw_build",
-    "mobile_build_test": "gulp mobile_build_test",
-    "mobile_build": "gulp mobile_build",
-    "config": "gulp config",
-    "js_build": "gulp js_build",
-    "tin": "gulp tin",
-    "www_tin": "gulp www_tin",
-    "npm_tin": "gulp npm_tin",
-    "test": "jasmine"
-  },
+  "version": "0.5.4",
   "dependencies": {
-    "argv": "0.0.2",
-    "csv-parse": "^1.3.3",
-    "fs-extra": "^1.0.0",
-    "hoek": "^5.0.3",
-    "imagemagick": "^0.1.3",
-    "less": "^3.0.2",
-    "request": "^2.88.0",
-    "requirejs": "^2.3.5",
-    "turf": "^3.0.14",
-    "turf-is-clockwise": "^1.0.0",
-    "wellknown": "^0.5.0"
-  },
-  "devDependencies": {
-    "@turf/boolean-point-in-polygon": "^6.0.1",
-    "@turf/turf": "^5.1.6",
-    "child_process": "^1.0.2",
-    "cryptiles": "^4.1.2",
-    "debug": "^3.1.0",
-    "eslint": "^4.18.2",
-    "eslint-config-google": "^0.7.1",
-    "extend": "^3.0.2",
-    "gulp": "^4.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-header": "^1.8.12",
-    "gulp-replace": "^1.0.0",
-    "gulp-uglify": "^3.0.1",
-    "gulp-zip": "^4.1.0",
-    "jasmine": "^3.3.0",
-    "lodash": "^4.17.14",
-    "mapshaper": "^0.4.111",
-    "randomatic": "^3.1.1",
-    "sshpk": "^1.14.2",
-    "workbox-build": "^3.6.3"
+    "maplat_core": "^0.5.5",
+    "maplat_tin": "^0.4.7"
   }
 }
