--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "sw_build": "gulp sw_build",
     "build": "npm run less_build; npm run www_build; npm run sw_build; npm run zip_build",
     "lint": "eslint src/",
-    "prepublishOnly": "npm run lint && npm run build",
     "preversion": "npm run lint",
     "version": "npm run build && git add -A"
   },
@@ -40,7 +39,7 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#ol6_bug_report",
+    "@maplat/core": "^0.6.4",
     "@maplat/tin": "^0.6.3",
     "@turf/turf": "^5.1.6",
     "ol": "^6.1.1"
