--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@maplat/core": "git+https://github.com/code4history/MaplatCore.git#dev",
     "@maplat/tin": "^0.6.3",
     "@turf/turf": "^5.1.6",
+    "bootstrap": "^3.4.1",
+    "bootstrap.native": "^2.0.27",
     "ol": "^6.1.1",
     "ol5": "file:packages/ol5",
     "swiper": "^5.3.1"
