--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "GIS"
   ],
   "author": "Kohei Otsuka, Code for History",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/code4history/Maplat/issues"
   },
@@ -75,12 +75,16 @@
     "terminate": "^2.1.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "workbox-build": "^4.3.1"
+    "workbox-build": "^4.3.1",
+    "clean-css": "^4.2.3",
+    "minimist": "^1.2.5",
+    "yargs-parser": "^18.1.3",
+    "utils-extend": "npm:utils-extend-patched@^1.0.9"
   },
   "resolutions": {
     "clean-css": "^4.2.3",
     "minimist": "^1.2.5",
     "yargs-parser": "^18.1.3",
-    "utils-extend": "^1.0.8"
+    "utils-extend": "npm:utils-extend-patched@^1.0.9"
   }
 }
