--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "^0.6.8",
+    "@maplat/core": "git+https://github.com/code4history/MaplatCore.git#geojson",
     "@maplat/tin": "^0.6.6",
     "@turf/turf": "^5.1.6",
+    "lodash.template": "^4.5.0",
     "ol": "^6.1.1",
     "ol5": "npm:ol@^5.3.3",
     "swiper": "^5.3.1"
