--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "clean-css": "^4.2.3",
     "core-js": "^3.6.4",
     "eslint": "^6.8.0",
     "fs-extra": "^8.1.0",
@@ -69,18 +70,17 @@
     "gulp-replace": "^1.0.0",
     "gulp-zip": "^4.2.0",
     "jasmine": "^3.5.0",
-    "less": "^3.11.1",
+    "less": "^3.12.2",
     "less-plugin-clean-css": "^1.5.1",
+    "minimist": "^1.2.5",
     "psaux": "^0.4.0",
     "sha1": "^1.1.1",
     "terminate": "^2.1.2",
-    "webpack": "^4.41.6",
+    "utils-extend": "npm:utils-extend-patched@^1.0.9",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11",
     "workbox-build": "^4.3.1",
-    "clean-css": "^4.2.3",
-    "minimist": "^1.2.5",
-    "yargs-parser": "^18.1.3",
-    "utils-extend": "npm:utils-extend-patched@^1.0.9"
+    "yargs-parser": "^18.1.3"
   },
   "resolutions": {
     "clean-css": "^4.2.3",
