--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jasmine": "^3.5.0",
     "less": "^3.12.2",
     "less-plugin-clean-css": "^1.5.1",
+    "lodash": "^4.17.20",
     "minimist": "^1.2.5",
     "psaux": "^0.4.0",
     "sha1": "^1.1.1",
