--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lodash.template": "^4.5.0",
     "ol": "^6.1.1",
     "ol5": "npm:ol@^5.3.3",
-    "swiper": "^5.3.1"
+    "swiper": "^5.3.1",
+    "weiwudi": "0.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
