@kobakazu0429 が実施してくれたビルド改善をUI付きにも実施。なお、MaplatCoreにタイルキャッシュ機能が一時的にないことによるエラーが発生あり。

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "stopserver": "gulp stopserver",
     "less_build": "lessc --clean-css less/ui.less dist/maplat.css",
     "less_build_packed": "lessc --clean-css less/ui_packed.less dist_packed/maplat.css",
-    "www_build": "webpack",
-    "www_build_packed": "webpack --config ./webpack.config.packed.js",
+    "www_build": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
+    "www_build_packed": "webpack --config ./webpack_config/webpack.config.packed.js",
     "zip_build": "gulp zip",
     "sw_build": "gulp sw_build",
     "build": "npm run freeze && npm run less_build && npm run www_build && npm run sw_build && npm run zip_build",
@@ -56,14 +56,13 @@
     "weiwudi": "0.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/register": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/register": "^7.12.1",
+    "babel-loader": "^8.2.2",
     "clean-css": "^4.2.3",
-    "core-js": "^3.6.4",
+    "core-js": "^3.8.0",
     "eslint": "^6.8.0",
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
@@ -82,6 +81,7 @@
     "utils-extend": "npm:utils-extend-patched@^1.0.9",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11",
+    "webpack-merge": "^5.4.0",
     "workbox-build": "^4.3.1",
     "yargs-parser": "^18.1.3"
   },
