--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#norm_arg1",
+    "@maplat/core": "github:code4history/MaplatCore#normalize_arg",
     "@maplat/tin": "^0.6.7",
     "@turf/turf": "^5.1.6",
     "caniuse-lite": "^1.0.30001120",
