--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "sw_build": "workbox injectManifest",
     "build": "npm run freeze && npm run less_build && npm run www_build && npm run sw_build && npm run zip_build",
     "build_packed": "npm run freeze && npm run less_build_packed && npm run www_build_packed",
-    "lint": "eslint src/",
+    "test": "jest",
     "preversion": "npm run lint",
     "version": "npm run build && npm run build_packed && git add -A",
     "freeze": "node node_modules/@maplat/core/bin/freezer.js -s parts -f src/freeze_images.js -u src/pointer_images.js && node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i",
-    "preinstall": "npx npm-force-resolutions || echo 'ignore'"
+    "preinstall": "npx npm-force-resolutions || echo 'ignore'",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint \"{src,spec}/**/*.js\" --fix",
+    "lint:prettier": "prettier \"./{src,spec}/**/*.js\" --write"
   },
   "repository": {
     "type": "git",
@@ -60,22 +63,26 @@
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@babel/register": "^7.12.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-css": "^4.2.3",
     "core-js": "^3.8.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jest": "^24.1.3",
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-replace": "^1.0.0",
     "gulp-zip": "^4.2.0",
-    "jasmine": "^3.5.0",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
     "less": "^3.12.2",
     "less-plugin-clean-css": "^1.5.1",
     "lodash": "^4.17.20",
     "minimist": "^1.2.5",
+    "prettier": "^2.2.1",
     "psaux": "^0.4.0",
     "sha1": "^1.1.1",
     "terminate": "^2.1.2",
