--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "locales/"
   ],
   "scripts": {
-    "server": "gulp server",
-    "stopserver": "gulp stopserver",
+    "server": "webpack-dev-server --config ./webpack_config/webpack.config.standard.js",
+    "server:packed": "webpack-dev-server --config ./webpack_config/webpack.config.packed.js",
     "less_build": "lessc --clean-css less/ui.less dist/maplat.css",
     "less_build_packed": "lessc --clean-css less/ui_packed.less dist_packed/maplat.css",
     "www_build": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
@@ -73,8 +73,6 @@
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-replace": "^1.0.0",
     "gulp-zip": "^4.2.0",
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
@@ -83,14 +81,12 @@
     "lodash": "^4.17.20",
     "minimist": "^1.2.5",
     "prettier": "^2.2.1",
-    "psaux": "^0.4.0",
-    "sha1": "^1.1.1",
-    "terminate": "^2.1.2",
     "utils-extend": "npm:utils-extend-patched@^1.0.9",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
-    "workbox-build": "^5.1.4",
+    "workbox-build": "^6.0.2",
     "workbox-cli": "^5.1.4",
     "yargs-parser": "^18.1.3"
   },
