--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "www_build": "webpack",
     "zip_build": "gulp zip",
     "sw_build": "gulp sw_build",
-    "build": "npm run less_build; npm run www_build; npm run sw_build; npm run zip_build",
+    "build": "npm run less_build && npm run www_build && npm run sw_build && npm run zip_build",
     "lint": "eslint src/",
-    "prepublish": "npm run lint; npm run build"
+    "prepublish": "npm run lint &&npm run build"
   },
   "repository": {
     "type": "git",
