--- a/package.json
+++ b/package.json
@@ -14,21 +14,18 @@
     "locales/"
   ],
   "scripts": {
-    "server": "webpack-dev-server --config ./webpack_config/webpack.config.standard.js",
-    "server:packed": "webpack-dev-server --config ./webpack_config/webpack.config.packed.js",
-    "less_build": "lessc --clean-css less/ui.less dist/maplat.css",
-    "less_build_packed": "lessc --clean-css less/ui_packed.less dist_packed/maplat.css",
+    "server": "webpack-dev-server --config ./webpack_config/webpack.config.standard.dev.js",
+    "server:packed": "webpack-dev-server --config ./webpack_config/webpack.config.packed.dev.js",
     "www_build": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
-    "www_build_packed": "webpack --config ./webpack_config/webpack.config.packed.js",
+    "www_build:packed": "webpack --config ./webpack_config/webpack.config.packed.js",
     "zip_build": "gulp zip",
     "sw_build": "workbox injectManifest",
-    "build": "npm run freeze && npm run less_build && npm run www_build && npm run sw_build && npm run zip_build",
-    "build_packed": "npm run freeze && npm run less_build_packed && npm run www_build_packed",
+    "build": "npm run www_build && npm run sw_build && npm run zip_build",
+    "build:packed": "npm run www_build:packed",
     "test": "jest",
     "preversion": "npm run lint",
     "version": "npm run build && npm run build_packed && git add -A",
-    "freeze": "node node_modules/@maplat/core/bin/freezer.js -s parts -f src/freeze_images.js -u src/pointer_images.js && node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i",
-    "preinstall": "npx npm-force-resolutions || echo 'ignore'",
+    "freeze": "node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"{src,spec}/**/*.js\" --fix",
     "lint:prettier": "prettier \"./{src,spec}/**/*.js\" --write"
@@ -48,8 +45,8 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#fetch_IE",
-    "@maplat/tin": "^0.6.7",
+    "@maplat/core": "^0.8.3",
+    "@maplat/tin": "^0.7.1",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
@@ -65,35 +62,35 @@
     "@babel/preset-env": "^7.12.7",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "clean-css": "^4.2.3",
-    "core-js": "^3.8.0",
-    "eslint": "^7.15.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.8.1",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-jest": "^24.1.3",
+    "file-loader": "^6.2.0",
+    "font-loader": "^0.1.2",
     "fs-extra": "^8.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-zip": "^4.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
-    "less": "^3.12.2",
-    "less-plugin-clean-css": "^1.5.1",
+    "less": "^3.13.1",
+    "less-loader": "^7.1.0",
     "lodash": "^4.17.20",
-    "minimist": "^1.2.5",
+    "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
-    "utils-extend": "npm:utils-extend-patched@^1.0.9",
-    "webpack": "^4.44.1",
+    "terser-webpack-plugin": "^4.2.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
     "workbox-build": "^6.0.2",
-    "workbox-cli": "^5.1.4",
-    "yargs-parser": "^18.1.3"
-  },
-  "resolutions": {
-    "clean-css": "^4.2.3",
-    "minimist": "^1.2.5",
-    "yargs-parser": "^18.1.3",
-    "utils-extend": "npm:utils-extend-patched@^1.0.9"
+    "workbox-cli": "^5.1.4"
   }
 }
