Update freeze script

--- a/package.json
+++ b/package.json
@@ -15,17 +15,15 @@
   ],
   "scripts": {
     "server": "webpack-dev-server --config ./webpack_config/webpack.config.standard.dev.js",
-    "server:packed": "webpack-dev-server --config ./webpack_config/webpack.config.packed.dev.js",
-    "www_build": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
-    "www_build:packed": "webpack --config ./webpack_config/webpack.config.packed.js",
-    "zip_build": "gulp zip",
-    "sw_build": "workbox injectManifest",
-    "build": "npm run www_build && npm run sw_build && npm run zip_build",
-    "build:packed": "npm run www_build:packed",
+    "server:packed": "npm run freeze && webpack-dev-server --config ./webpack_config/webpack.config.packed.dev.js",
+    "build": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
+    "build:packed": "npm run freeze && webpack --config ./webpack_config/webpack.config.packed.js",
+    "zip": "gulp zip",
+    "sw": "workbox injectManifest",
     "test": "jest",
     "preversion": "npm run lint",
-    "version": "npm run build && npm run build_packed && git add -A",
-    "freeze": "node node_modules/@maplat/core/bin/freezer.js -s locales -f src/freeze_locales.js -i",
+    "version": "npm run build && npm run build_packed && npm run sw && npm run zip && git add -A",
+    "freeze": "node bin/freezer.js",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"{src,spec}/**/*.js\" --fix",
     "lint:prettier": "prettier \"./{src,spec}/**/*.js\" --write"
