--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.2",
     "core-js": "^3.8.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
@@ -88,6 +89,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0",
     "workbox-build": "^6.0.2",
-    "workbox-cli": "^5.1.4"
+    "workbox-cli": "^5.1.4",
+    "write-file-webpack-plugin": "^4.5.1"
   }
 }
