Use webpack-workbox-plugin

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "webpack-merge": "^5.4.0",
     "workbox-build": "^6.0.2",
     "workbox-cli": "^5.1.4",
+    "workbox-webpack-plugin": "^6.0.2",
     "write-file-webpack-plugin": "^4.5.1"
   }
 }
