--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#master",
-    "@maplat/tin": "github:code4history/MaplatTin#master",
+    "@maplat/core": "^0.8.6",
+    "@maplat/tin": "^0.7.3",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
