Update lint fix

--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "build:standard": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
     "build:packed": "npm run freeze && webpack --config ./webpack_config/webpack.config.packed.js",
     "zip": "gulp zip",
-    "sw": "workbox injectManifest",
     "test": "jest",
     "preversion": "npm run lint",
-    "version": "npm run build && npm run build:packed && npm run sw && npm run zip && git add -A",
+    "version": "npm run build && npm run zip && git add -A",
     "freeze": "node bin/freezer.js",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"{src,spec}/**/*.js\" --fix",
