--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash.template": "^4.5.0",
     "ol": "^6.1.1",
     "ol5": "npm:ol@^5.3.3",
+    "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
     "swiper": "^5.3.1",
     "weiwudi": "^0.1.3"
   },
