--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "^0.8.7",
+    "@maplat/core": "github:code4history/MaplatCore#master",
     "@maplat/tin": "^0.7.3",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
     "lodash.template": "^4.5.0",
     "ol": "^6.1.1",
+    "ol-contextmenu": "^4.1.0",
     "ol5": "npm:ol@^5.3.3",
     "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
     "swiper": "^5.3.1",
