--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#master",
-    "@maplat/tin": "^0.7.3",
+    "@maplat/core": "^0.8.8",
+    "@maplat/tin": "^0.7.4",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
