--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ol5": "npm:ol@^5.3.3",
     "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
     "swiper": "^5.3.1",
+    "swiper4": "npm:swiper@^4.5.1",
     "weiwudi": "^0.1.3"
   },
   "devDependencies": {
