--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "GIS"
   ],
   "author": "Kohei Otsuka, Code for History",
-  "license": "Apache-2.0",
+  "license": "Maplat Limited License 1.1",
   "bugs": {
     "url": "https://github.com/code4history/Maplat/issues"
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "^0.8.9",
-    "@maplat/tin": "^0.7.4",
+    "@maplat/core": "^0.9.0",
+    "@maplat/tin": "^0.8.0",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
