--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
     "@maplat/core": "github:code4history/MaplatCore#unifyTerm",
-    "@maplat/tin": "^0.8.1",
+    "@maplat/tin": "github:code4history/MaplatTin#pointInPolygon",
     "@turf/turf": "^5.1.6",
     "bootstrap.native": "^3.0.14",
     "caniuse-lite": "^1.0.30001120",
