--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "github:code4history/MaplatCore#delaunator_test",
+    "@maplat/core": "github:code4history/MaplatCore#ol7",
     "@maplat/tin": "github:code4history/MaplatTin#delaunator_test",
     "@turf/turf": "^6.5.0",
     "bootstrap.native": "^3.0.15",
     "caniuse-lite": "^1.0.30001239",
     "lodash.template": "^4.5.0",
-    "ol": "^6.1.1",
+    "ol": "^7.1.0",
     "ol-contextmenu": "^4.1.0",
     "swiper": "^6.7.1",
     "swiper4": "npm:swiper@^4.5.1",
