--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "locales/"
   ],
   "scripts": {
-    "server": "webpack-cli serve --config ./webpack_config/webpack.config.standard.dev.js --mode=development --devtool=inline-source-map",
-    "server:packed": "npm run freeze && webpack-cli serve --config ./webpack_config/webpack.config.packed.dev.js --mode=development --devtool=inline-source-map",
+    "server": "webpack-cli serve --config ./webpack_config/webpack.config.standard.dev.js --mode=development",
+    "server:packed": "npm run freeze && webpack-cli serve --config ./webpack_config/webpack.config.packed.dev.js --mode=development",
     "build": "npm run build:standard && npm run build:packed",
     "build:standard": "webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
     "build:packed": "npm run freeze && webpack --config ./webpack_config/webpack.config.packed.js",
@@ -84,7 +84,7 @@
     "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.3.1",
+    "prettier": "^2.6.2",
     "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
     "terser-webpack-plugin": "^5.3.1",
     "url-loader": "^4.1.1",
