--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "https://github.com/code4history/MaplatCore#get_map",
+    "@maplat/core": "https://github.com/code4history/MaplatCore#yamato_koriyama_4",
     "@maplat/tin": "^0.9.4",
     "@turf/turf": "^6.5.0",
     "caniuse-lite": "^1.0.30001431",
