--- a/pwa/sakai_manifest.json
+++ b/pwa/sakai_manifest.json
@@ -1,23 +1,23 @@
 {
-  "name": "ぷらっと会津若松",
-  "short_name": "ぷら会津",
+  "name": "ぷらっと堺",
+  "short_name": "ぷら堺",
   "background_color": "#f6f0d3",
   "icons": [
     {
-      "src": "aizu/manifest-icon-192.png",
+      "src": "sakai/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "aizu/manifest-icon-512.png",
+      "src": "sakai/manifest-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://s.maplat.jp/r/aizumap/",
-  "scope": "/r/aizumap/",
+  "start_url": "https://s.maplat.jp/r/sakaimap/",
+  "scope": "/r/sakaimap/",
   "display": "standalone",
   "theme_color": "#f6f0d3"
 }
